--- a/css/style.scss
+++ b/css/style.scss
@@ -1,24 +1,69 @@
 $nav-height: 7.5rem;
 $nav-height-full: 11.25rem;
-$medium-width: 60rem;
+$medium-width: 45rem;
+$width-internal: 1108px;
+$width-external: 1810px;
+$background-default: #efeee9;
+$background-light: #fff;
+$text-light: $background-light;
+$background-dark: #353535;
+$showcase-filter: #000;
 
-
-html, body {
+html {
     font-family: "Roboto", sans-serif;
 }
 
-.intro h1, .navbar li, #articles h2 {
+body {
+    background-color: $background-default;
+    max-width: $width-external;
+    margin: auto;
+}
+
+.full_width {
+    width: 100%;
+    box-sizing: border-box;
+}
+
+header {
+    background: url("../img/ryyr-k3ysqg-damian-zaleski.png") -44px -16px no-repeat;    
+}
+
+.intro h1, .navbar li, #articles h2, .intro a {
         text-transform: uppercase;    
 }
 
-.intro {
-    h1 {
-        font-family: "Roboto Slab", serif;
-    }
+a:focus {
+    background: orange;
+    font-size: 150%;
 }
 
-img {
-    max-width: 100%;
+.intro {
+    font-size: 1.25rem;
+    font-weight: 300;
+    background-color: $background-light;
+    padding: 2.1rem 1rem;
+    text-align: center;
+    h1 {
+        font-family: "Roboto Slab", serif;
+        font-weight: 100;
+        padding: 1rem 0;
+    }
+    p {
+        text-align: left;
+        max-width: 32em;
+        margin: 0 auto;
+        line-height: 1.35em;
+    }
+    a {
+        display: inline-block;
+        margin: 4.1rem auto 4.8rem;
+        text-decoration: none;
+        border: 2px solid;
+        color: inherit;
+        font-weight: 600;
+        padding: 1rem 2.3rem;
+        font-size: 1.125rem;
+    }
 }
 
 .navbar {
@@ -27,7 +72,7 @@ img {
     top: 0;
     left: 0;
     z-index: 10;
-    background: rgba(255,0,0,0.5);
+    background: rgba(255,255,255,0.7);
     height: $nav-height;
 }
 
@@ -102,13 +147,109 @@ img {
     right: 1rem;
 }
 
+.nav__widget {
+    cursor: pointer;
+}
+
+.nav__widget_hidden {
+    display: none;
+}
+
+
 .motto {
-    margin-top: $nav-height;
+    padding-top: $nav-height;
+    font-size: 1.48rem;
+    font-weight: 300;
+    text-align: right;
 }
 
 .motto p {
+    padding-top: 20rem;
+    display: inline-block;
     text-align: right;
+    max-width: 24em;
 }
+
+.intro h1, .article, #motto {
+    text-align: center;
+}
+
+.showcase {
+    display: flex;
+    flex-flow: column nowrap;
+}
+
+.showcase__tile {
+    max-height: 418px;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    background-color: $showcase-filter;
+    img {
+        margin: 0;
+        padding: 0;
+        min-width: 100%;
+        min-height: 100%;
+        transition: all 0.2s linear;
+    }
+    .showcase__details {
+        display: none;
+        color: $text-light;
+        text-transform: uppercase;
+        font-size: 1.5rem;
+        font-weight: 300;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    &:hover {
+        img {
+            opacity: 0.4;
+            transition: all 0.4s ease-out;
+        }
+        .showcase__details {
+            display: block;
+        }
+    }
+}
+
+
+
+.showcase {
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 auto;
+}
+.showcase_tile {
+    margin: 0 auto;
+    padding: 0;
+    width: 90%; 
+    max-height: 418px;
+    overflow: hidden;
+    img {
+        width: 100%;
+        max-height: 100%;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+#about img {
+    max-width: 100%;
+}
+
 
 footer ul {
     flex-flow: row nowrap;
@@ -119,33 +260,20 @@ footer .copyright {
     margin-left: auto;
 }
 
-#portfolio div {
-    max-width: 100%;
-    img {
-        width: 100%;
-    }
-}
 
-.intro, .article, #motto {
-    text-align: center;
-}
-
-.nav__widget {
-    cursor: pointer;
-}
-
-.nav__widget_hidden {
-    display: none;
-}
 
 @media (min-width: $medium-width) {
+    .limited_width {
+        max-width: $width-internal;
+        margin: 0 auto;
+    }
     .navbar {
         height: $nav-height-full;
     }
     .navbar__links {
         flex-flow: row nowrap;
         align-items: center;
-        justify-content: space-around;
+        justify-content: space-between;
         height: 2rem;
         margin-top: 4.2rem;
     }
@@ -156,6 +284,39 @@ footer .copyright {
         display: none;
     }
     .motto {
-        margin-top: $nav-height-full;
+        padding-top: $nav-height-full;
+        p {
+            padding-top: 32rem;            
+        }
     }
+    .showcase {
+        flex-flow: row wrap;
+        align-content: stretch;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .showcase__tile {
+        flex: 0 1 559px;
+        margin: 0;
+        padding: 0;
+        height: 418px;
+        overflow: hidden;
+        img {
+            width: auto;
+            min-width: 100%;
+            max-width: none;
+            height: 100%;
+        }
+    }    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+
 }
