--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ a:focus {
   font-size: 150%; }
 
 .intro {
+  margin: 3rem auto;
   font-size: 1.25rem;
   font-weight: 300;
   background-color: #fff;
@@ -29,7 +30,7 @@ a:focus {
   .intro h1 {
     font-family: "Roboto Slab", serif;
     font-weight: 100;
-    padding: 1rem 0; }
+    padding: 2.05rem 0 2.7rem; }
   .intro p {
     text-align: left;
     max-width: 32em;
@@ -121,6 +122,7 @@ a:focus {
 
 .motto p {
   padding-top: 20rem;
+  padding-bottom: 2rem;
   display: inline-block;
   text-align: right;
   max-width: 24em; }
@@ -176,6 +178,13 @@ a:focus {
     width: 100%;
     max-height: 100%; }
 
+.big_text {
+  font-weight: 100;
+  font-size: 2.28rem;
+  text-align: center;
+  max-width: 21em;
+  margin: 3rem auto; }
+
 #about img {
   max-width: 100%; }
 
@@ -189,7 +198,9 @@ footer .copyright {
 @media (min-width: 45rem) {
   .limited_width {
     max-width: 1108px;
-    margin: 0 auto; }
+    box-sizing: border-box;
+    margin-left: auto;
+    margin-right: auto; }
 
   .navbar {
     height: 11.25rem; }
@@ -210,7 +221,12 @@ footer .copyright {
   .motto {
     padding-top: 11.25rem; }
     .motto p {
-      padding-top: 32rem; }
+      padding-top: 32rem;
+      padding-bottom: 4.8rem; }
+
+  .intro {
+    margin-top: 12rem;
+    margin-bottom: 12rem; }
 
   .showcase {
     flex-flow: row wrap;
@@ -228,6 +244,9 @@ footer .copyright {
       width: auto;
       min-width: 100%;
       max-width: none;
-      height: 100%; } }
+      height: 100%; }
+
+  .big_text {
+    margin: 13.3rem auto 13rem; } }
 
 /*# sourceMappingURL=style.css.map */
