--- a/css/style.scss
+++ b/css/style.scss
@@ -38,6 +38,7 @@ a:focus {
 }
 
 .intro {
+    margin: 3rem auto;
     font-size: 1.25rem;
     font-weight: 300;
     background-color: $background-light;
@@ -46,7 +47,7 @@ a:focus {
     h1 {
         font-family: "Roboto Slab", serif;
         font-weight: 100;
-        padding: 1rem 0;
+        padding: 2.05rem 0 2.7rem;
     }
     p {
         text-align: left;
@@ -165,6 +166,7 @@ a:focus {
 
 .motto p {
     padding-top: 20rem;
+    padding-bottom: 2rem;
     display: inline-block;
     text-align: right;
     max-width: 24em;
@@ -237,7 +239,13 @@ a:focus {
 
 
 
-
+.big_text {
+    font-weight: 100;
+    font-size: 2.28rem;
+    text-align: center;
+    max-width: 21em;
+    margin: 3rem auto;
+}
 
 
 
@@ -265,7 +273,9 @@ footer .copyright {
 @media (min-width: $medium-width) {
     .limited_width {
         max-width: $width-internal;
-        margin: 0 auto;
+        box-sizing: border-box;
+        margin-left: auto;
+        margin-right: auto;
     }
     .navbar {
         height: $nav-height-full;
@@ -286,8 +296,13 @@ footer .copyright {
     .motto {
         padding-top: $nav-height-full;
         p {
-            padding-top: 32rem;            
+            padding-top: 32rem;
+            padding-bottom: 4.8rem;
         }
+    }
+    .intro {
+        margin-top: 12rem;
+        margin-bottom: 12rem;
     }
     .showcase {
         flex-flow: row wrap;
@@ -308,15 +323,11 @@ footer .copyright {
             max-width: none;
             height: 100%;
         }
-    }    
-    
-    
-    
-    
-    
-    
-    
-    
+    }
+    .big_text {
+        margin: 13.3rem auto 13rem;
+    }
+
     
 
 }
