--- a/css/style.scss
+++ b/css/style.scss
@@ -5,16 +5,20 @@ $width-internal: 1108px;
 $width-external: 1810px;
 $background-default: #efeee9;
 $background-light: #fff;
+$text: #232323;
 $text-light: $background-light;
+$text-secondary: #250d59;
+
 $background-dark: #353535;
 $showcase-filter: #000;
 
 html {
     font-family: "Roboto", sans-serif;
+    color: $text;
+    background-color: $background-default;
 }
 
 body {
-    background-color: $background-default;
     max-width: $width-external;
     margin: auto;
 }
@@ -33,8 +37,7 @@ header {
 }
 
 a:focus {
-    background: orange;
-    font-size: 150%;
+    background: rgba(255,165,0,0.7);
 }
 
 .intro {
@@ -236,9 +239,6 @@ a:focus {
     }
 }
 
-
-
-
 .big_text {
     font-weight: 100;
     font-size: 2.28rem;
@@ -247,15 +247,35 @@ a:focus {
     margin: 3rem auto;
 }
 
+.example {
+    background-color: $background-light;
+    color: $text-secondary;
+}
 
-
-
-
-
-
-
-#about img {
+.example__picture {
     max-width: 100%;
+    img {
+        max-width: 100%;
+    }
+}
+
+.bulletpoint {
+    font-size: 0.9rem;
+    padding: 1rem;
+    font-weight: 300;
+}
+.bulletpoint__header {
+    text-transform: uppercase;
+    letter-spacing: .38em;
+    margin-bottom: 0;
+    font-weight: 300;
+    font-size: inherit;
+}
+
+.bulletpoint__body {
+    line-height: 1.57em;
+    max-width: 23em;
+    margin-top: 0.18rem;
 }
 
 
@@ -328,6 +348,24 @@ footer .copyright {
         margin: 13.3rem auto 13rem;
     }
 
+    .example {
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+        justify-content: space-around;
+    }
     
-
+    .example__bulletpoints {
+        display: flex;
+        flex-flow: column;
+        justify-content: center;
+        flex: 0 0 30rem;
+        margin-left: 8rem;
+    }
+    .example__picture {
+        flex: 1 0 458px;
+        max-width: 840px;
+        align-self: center;
+    }    
+    
 }
