--- a/css/style.scss
+++ b/css/style.scss
@@ -8,7 +8,7 @@ $background-light: #fff;
 $text: #232323;
 $text-light: $background-light;
 $text-secondary: #250d59;
-
+$article-link: #4faefe;
 $background-dark: #353535;
 $showcase-filter: #000;
 
@@ -32,7 +32,7 @@ header {
     background: url("../img/ryyr-k3ysqg-damian-zaleski.png") -44px -16px no-repeat;    
 }
 
-.intro h1, .navbar li, #articles h2, .intro a {
+.intro h1, .navbar li, .intro a {
         text-transform: uppercase;    
 }
 
@@ -254,8 +254,9 @@ a:focus {
 
 .example__picture {
     max-width: 100%;
+    overflow: hidden;
     img {
-        max-width: 100%;
+        width: 100%;
     }
 }
 
@@ -278,6 +279,35 @@ a:focus {
     margin-top: 0.18rem;
 }
 
+.articles {
+    padding-top: 6rem;
+    padding-bottom: 5rem;
+}
+
+.article {
+    background-color: $background-light;
+    padding: 2.5em;
+    position: relative;
+}
+
+.article__header {
+    font-size: 1.125rem;
+    margin-bottom: 2em;
+}
+
+.article__body {
+    font-weight: 300;
+}
+
+.article__link {
+    color: $article-link;
+    font-weight: 300;
+    padding-top: 0.5rem;
+    position: absolute;
+    bottom: 2.15rem;
+    left: 50%;
+    transform: translateX(-50%);
+}
 
 footer ul {
     flex-flow: row nowrap;
@@ -356,6 +386,7 @@ footer .copyright {
     }
     
     .example__bulletpoints {
+        flex-shrink: 0;
         display: flex;
         flex-flow: column;
         justify-content: center;
@@ -363,9 +394,28 @@ footer .copyright {
         margin-left: 8rem;
     }
     .example__picture {
-        flex: 1 0 458px;
+        flex: 1 0 480px;
+        max-height: 720px;
         max-width: 840px;
         align-self: center;
-    }    
-    
+        img {
+            width: 145%;
+            max-height: 100%;
+            margin-left: -6%;
+        }
+    }
+    .articles {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-between;
+    }
+    .article {
+        flex: 1;
+        padding: 1.5rem 2.5rem 5rem;
+        margin-right: 2rem;
+        
+        &:last-of-type {
+            margin-right: 0;
+        }
+    }   
 }
