--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,7 @@ $nav-height: 7.5rem;
 $nav-height-full: 11.25rem;
 $medium-width: 45rem;
 $width-internal: 1108px;
+$width-widescreen: 1148px;
 $width-external: 1810px;
 $background-default: #efeee9;
 $background-light: #fff;
@@ -10,6 +11,7 @@ $text-light: $background-light;
 $text-secondary: #250d59;
 $article-link: #4faefe;
 $background-dark: #353535;
+$footer: $background-dark;
 $showcase-filter: #000;
 
 html {
@@ -28,6 +30,14 @@ body {
     box-sizing: border-box;
 }
 
+.limited_width {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    max-width: $width-internal;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 header {
     background: url("../img/ryyr-k3ysqg-damian-zaleski.png") -44px -16px no-repeat;    
 }
@@ -37,7 +47,7 @@ header {
 }
 
 a:focus {
-    background: rgba(255,165,0,0.7);
+    background: rgba(255,165,0,0.3);
 }
 
 .intro {
@@ -45,7 +55,8 @@ a:focus {
     font-size: 1.25rem;
     font-weight: 300;
     background-color: $background-light;
-    padding: 2.1rem 1rem;
+    padding-top: 2.1rem;
+    padding-bottom: 2.1rem;
     text-align: center;
     h1 {
         font-family: "Roboto Slab", serif;
@@ -134,7 +145,7 @@ a:focus {
     display: none;
 }
 
-.navbar__links, footer ul {
+.navbar__links {
     display: flex;
     list-style: none;
     padding: 0;
@@ -220,8 +231,6 @@ a:focus {
     }
 }
 
-
-
 .showcase {
     flex-wrap: wrap;
     justify-content: center;
@@ -302,31 +311,70 @@ a:focus {
 .article__link {
     color: $article-link;
     font-weight: 300;
-    padding-top: 0.5rem;
+    margin-top: 0.5rem;
     position: absolute;
     bottom: 2.15rem;
     left: 50%;
     transform: translateX(-50%);
 }
 
-footer ul {
+.address {
+    background-color: $background-dark;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+.address, .address__email {
+    color: $text-light;
+    text-decoration: none;
+}
+
+.address__text {
+    font-style: normal;
+    font-weight: 300;
+    max-width: 39rem;
+    line-height: 148%;
+}
+
+.address__header {
+    font-size: inherit;
+}
+
+.address__map {
+    width: 100%;
+    height: 25rem;
+}
+
+.footer {
+    padding-top: 1.4rem;
+    color: $footer;
+    a {
+        color: inherit;
+    }
+    display: flex;
     flex-flow: row nowrap;
+    list-style-type: none;
     justify-content: flex-start;
+    align-items: center;
+    padding-left: 0;
+    font-size: 1.5rem;
 }
 
-footer .copyright {
-    margin-left: auto;
+.footer__item {
+    padding-right: 0.5rem;
+    &:last-of-type {
+        margin-left: auto;
+        padding-right: 0;
+    }
 }
 
+.copyright {
+    font-weight: 300;
+    font-size: 1.25rem;
+}
 
 
 @media (min-width: $medium-width) {
-    .limited_width {
-        max-width: $width-internal;
-        box-sizing: border-box;
-        margin-left: auto;
-        margin-right: auto;
-    }
     .navbar {
         height: $nav-height-full;
     }
@@ -417,5 +465,25 @@ footer .copyright {
         &:last-of-type {
             margin-right: 0;
         }
-    }   
+    }
+    .address > div {
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+    }
+    
+    .address__text {
+        padding-right: 10rem;
+    }
+    
+    .footer__item {
+        padding-right: 1.75rem;
+    }
+}
+
+@media (min-width: $width-widescreen) {
+    .limited_width {
+        padding-left: 0;
+        padding-right: 0;
+    }
 }
