--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 html {
   font-family: "Roboto", sans-serif;
+  font-weight: 300;
   color: #232323;
   background-color: #efeee9; }
 
@@ -21,7 +22,7 @@ body {
 header {
   background: url("../img/ryyr-k3ysqg-damian-zaleski.png") -44px -16px no-repeat; }
 
-.intro h1, .navbar li, .intro a {
+.intro__header, .navbar__option, .intro__link {
   text-transform: uppercase; }
 
 a:focus {
@@ -30,29 +31,31 @@ a:focus {
 .intro {
   margin: 3rem auto;
   font-size: 1.25rem;
-  font-weight: 300;
   background-color: #fff;
   padding-top: 2.1rem;
   padding-bottom: 2.1rem;
   text-align: center; }
-  .intro h1 {
-    font-family: "Roboto Slab", serif;
-    font-weight: 100;
-    padding: 2.05rem 0 2.7rem; }
-  .intro p {
-    text-align: left;
-    max-width: 32em;
-    margin: 0 auto;
-    line-height: 1.35em; }
-  .intro a {
-    display: inline-block;
-    margin: 4.1rem auto 4.8rem;
-    text-decoration: none;
-    border: 2px solid;
-    color: inherit;
-    font-weight: 600;
-    padding: 1rem 2.3rem;
-    font-size: 1.125rem; }
+
+.intro__header {
+  font-family: "Roboto Slab", serif;
+  font-weight: 100;
+  padding: 2.05rem 0 2.7rem; }
+
+.intro__body {
+  text-align: left;
+  max-width: 37em;
+  margin: 0 auto;
+  line-height: 1.35em; }
+
+.intro__link {
+  display: inline-block;
+  margin: 4.1rem auto 4.8rem;
+  text-decoration: none;
+  border: 2px solid;
+  color: inherit;
+  font-weight: 600;
+  padding: 1rem 2.3rem;
+  font-size: 1.125rem; }
 
 .navbar {
   width: 100%;
@@ -65,7 +68,6 @@ a:focus {
 
 .navbar__option {
   font-size: 0.64rem;
-  font-weight: 600;
   letter-spacing: 0.348em; }
   .navbar__option a {
     text-decoration: none;
@@ -73,8 +75,7 @@ a:focus {
 
 .navbar__logo {
   font-size: 1.5rem;
-  letter-spacing: 0.415em;
-  font-weight: 300; }
+  letter-spacing: 0.415em; }
 
 @keyframes hide_navbar {
   from {
@@ -105,18 +106,14 @@ a:focus {
 .navbar__links {
   display: flex;
   list-style: none;
-  padding: 0; }
-
-.navbar__links {
+  padding: 0;
   flex-flow: column nowrap;
   align-items: center; }
 
 .nav__widget {
   position: absolute;
   top: 0rem;
-  right: 1rem; }
-
-.nav__widget {
+  right: 1rem;
   cursor: pointer; }
 
 .nav__widget_hidden {
@@ -125,8 +122,8 @@ a:focus {
 .motto {
   padding-top: 7.5rem;
   font-size: 1.48rem;
-  font-weight: 300;
-  text-align: right; }
+  text-align: right;
+  font-weight: 300; }
 
 .motto p {
   padding-top: 20rem;
@@ -135,56 +132,41 @@ a:focus {
   text-align: right;
   max-width: 24em; }
 
-.intro h1, .article, #motto {
-  text-align: center; }
-
 .showcase {
   display: flex;
-  flex-flow: column nowrap; }
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0 auto; }
+
+.showcase__details {
+  display: none;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
 
 .showcase__tile {
   max-height: 418px;
   overflow: hidden;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
+  width: 90%;
   position: relative;
   background-color: #000; }
   .showcase__tile img {
     margin: 0;
     padding: 0;
     min-width: 100%;
-    min-height: 100%;
+    height: 100%;
     transition: all 0.2s linear; }
-  .showcase__tile .showcase__details {
-    display: none;
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 1.5rem;
-    font-weight: 300;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); }
   .showcase__tile:hover img {
     opacity: 0.4;
     transition: all 0.4s ease-out; }
   .showcase__tile:hover .showcase__details {
     display: block; }
-
-.showcase {
-  flex-wrap: wrap;
-  justify-content: center;
-  margin: 0 auto; }
-
-.showcase_tile {
-  margin: 0 auto;
-  padding: 0;
-  width: 90%;
-  max-height: 418px;
-  overflow: hidden; }
-  .showcase_tile img {
-    width: 100%;
-    max-height: 100%; }
 
 .big_text {
   font-weight: 100;
@@ -204,41 +186,40 @@ a:focus {
     width: 100%; }
 
 .bulletpoint {
-  font-size: 0.9rem;
-  padding: 1rem;
-  font-weight: 300; }
+  padding: 1rem; }
 
 .bulletpoint__header {
   text-transform: uppercase;
   letter-spacing: .38em;
   margin-bottom: 0;
-  font-weight: 300;
-  font-size: inherit; }
+  font-size: .9rem;
+  font-weight: 400; }
 
 .bulletpoint__body {
-  line-height: 1.57em;
+  line-height: 1.41rem;
   max-width: 23em;
-  margin-top: 0.18rem; }
+  margin-top: 0.18rem;
+  font-size: .75rem; }
 
 .articles {
   padding-top: 6rem;
   padding-bottom: 5rem; }
 
 .article {
+  text-align: center;
   background-color: #fff;
   padding: 2.5em;
-  position: relative; }
+  position: relative;
+  margin: 0 0 2rem 0; }
+  .article:last-of-type {
+    margin-bottom: 0; }
 
 .article__header {
   font-size: 1.125rem;
   margin-bottom: 2em; }
 
-.article__body {
-  font-weight: 300; }
-
 .article__link {
   color: #4faefe;
-  font-weight: 300;
   margin-top: 0.5rem;
   position: absolute;
   bottom: 2.15rem;
@@ -256,7 +237,6 @@ a:focus {
 
 .address__text {
   font-style: normal;
-  font-weight: 300;
   max-width: 39rem;
   line-height: 148%; }
 
@@ -287,7 +267,6 @@ a:focus {
     padding-right: 0; }
 
 .copyright {
-  font-weight: 300;
   font-size: 1.25rem; }
 
 @media (min-width: 45rem) {
@@ -370,11 +349,11 @@ a:focus {
   .article {
     flex: 1;
     padding: 1.5rem 2.5rem 5rem;
-    margin-right: 2rem; }
+    margin: 0 2rem 0 0; }
     .article:last-of-type {
       margin-right: 0; }
 
-  .address > div {
+  .address__flexbox {
     display: flex;
     flex-flow: row nowrap;
     align-items: center; }
