--- a/css/style.scss
+++ b/css/style.scss
@@ -16,20 +16,18 @@ $showcase-filter: #000;
 
 html {
     font-family: "Roboto", sans-serif;
+    font-weight: 300;
     color: $text;
     background-color: $background-default;
 }
-
 body {
     max-width: $width-external;
     margin: auto;
 }
-
 .full_width {
     width: 100%;
     box-sizing: border-box;
 }
-
 .limited_width {
     padding-left: 1rem;
     padding-right: 1rem;
@@ -37,50 +35,44 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
-
 header {
     background: url("../img/ryyr-k3ysqg-damian-zaleski.png") -44px -16px no-repeat;    
 }
-
-.intro h1, .navbar li, .intro a {
+.intro__header, .navbar__option, .intro__link {
         text-transform: uppercase;    
 }
-
 a:focus {
     background: rgba(255,165,0,0.3);
 }
-
 .intro {
     margin: 3rem auto;
     font-size: 1.25rem;
-    font-weight: 300;
     background-color: $background-light;
     padding-top: 2.1rem;
     padding-bottom: 2.1rem;
     text-align: center;
-    h1 {
-        font-family: "Roboto Slab", serif;
-        font-weight: 100;
-        padding: 2.05rem 0 2.7rem;
-    }
-    p {
-        text-align: left;
-        max-width: 32em;
-        margin: 0 auto;
-        line-height: 1.35em;
-    }
-    a {
-        display: inline-block;
-        margin: 4.1rem auto 4.8rem;
-        text-decoration: none;
-        border: 2px solid;
-        color: inherit;
-        font-weight: 600;
-        padding: 1rem 2.3rem;
-        font-size: 1.125rem;
-    }
 }
-
+.intro__header {
+    font-family: "Roboto Slab", serif;
+    font-weight: 100;
+    padding: 2.05rem 0 2.7rem;    
+}
+.intro__body {
+    text-align: left;
+    max-width: 37em;
+    margin: 0 auto;
+    line-height: 1.35em;    
+}
+.intro__link {
+    display: inline-block;
+    margin: 4.1rem auto 4.8rem;
+    text-decoration: none;
+    border: 2px solid;
+    color: inherit;
+    font-weight: 600;
+    padding: 1rem 2.3rem;
+    font-size: 1.125rem;    
+}
 .navbar {
     width: 100%;
     position: fixed;
@@ -90,23 +82,18 @@ a:focus {
     background: rgba(255,255,255,0.7);
     height: $nav-height;
 }
-
 .navbar__option {
     font-size: 0.64rem;
-    font-weight: 600;
     letter-spacing: 0.348em;
     a {
         text-decoration: none;
         color: inherit;
     }
 }
-
 .navbar__logo {
     font-size: 1.5rem;
     letter-spacing: 0.415em;
-    font-weight: 300;
 }
-
 @keyframes hide_navbar {
     from {
         left: 0;
@@ -118,7 +105,6 @@ a:focus {
         left: -90%;
     }
 }
-
 @keyframes show_navbar {
     from {
         left: -90%;
@@ -127,12 +113,10 @@ a:focus {
         left: 0;
     }
 }
-
 .nav_collapsed {
     left: -90%;
     animation: hide_navbar cubic-bezier(.73,.01,.04,1) 0.35s ;
 }
-
 .nav_expanded {
     left: 0;
     animation: show_navbar cubic-bezier(.73,.01,.04,1) 0.25s;
@@ -140,44 +124,31 @@ a:focus {
 .nav_collapsed #widget_show {
     display: block;
 }
-
 .nav_collapsed #widget_hide {
     display: none;
 }
-
 .navbar__links {
     display: flex;
     list-style: none;
     padding: 0;
-}
-
-.navbar__links {
     flex-flow: column nowrap;
-    align-items: center;
+    align-items: center;    
 }
-
 .nav__widget {
     position: absolute;
     top: 0rem;
     right: 1rem;
+    cursor: pointer;    
 }
-
-.nav__widget {
-    cursor: pointer;
-}
-
 .nav__widget_hidden {
     display: none;
 }
-
-
 .motto {
     padding-top: $nav-height;
     font-size: 1.48rem;
-    font-weight: 300;
     text-align: right;
+    font-weight: 300;
 }
-
 .motto p {
     padding-top: 20rem;
     padding-bottom: 2rem;
@@ -185,40 +156,36 @@ a:focus {
     text-align: right;
     max-width: 24em;
 }
-
-.intro h1, .article, #motto {
-    text-align: center;
-}
-
 .showcase {
     display: flex;
-    flex-flow: column nowrap;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 auto;
 }
-
+.showcase__details {
+    display: none;
+    color: $text-light;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 .showcase__tile {
     max-height: 418px;
     overflow: hidden;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
+    width: 90%;
     position: relative;
     background-color: $showcase-filter;
     img {
         margin: 0;
         padding: 0;
         min-width: 100%;
-        min-height: 100%;
+        height: 100%;
         transition: all 0.2s linear;
-    }
-    .showcase__details {
-        display: none;
-        color: $text-light;
-        text-transform: uppercase;
-        font-size: 1.5rem;
-        font-weight: 300;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
     }
     &:hover {
         img {
@@ -230,24 +197,6 @@ a:focus {
         }
     }
 }
-
-.showcase {
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 0 auto;
-}
-.showcase_tile {
-    margin: 0 auto;
-    padding: 0;
-    width: 90%; 
-    max-height: 418px;
-    overflow: hidden;
-    img {
-        width: 100%;
-        max-height: 100%;
-    }
-}
-
 .big_text {
     font-weight: 100;
     font-size: 2.28rem;
@@ -255,12 +204,10 @@ a:focus {
     max-width: 21em;
     margin: 3rem auto;
 }
-
 .example {
     background-color: $background-light;
     color: $text-secondary;
 }
-
 .example__picture {
     max-width: 100%;
     overflow: hidden;
@@ -268,83 +215,69 @@ a:focus {
         width: 100%;
     }
 }
-
 .bulletpoint {
-    font-size: 0.9rem;
     padding: 1rem;
-    font-weight: 300;
 }
 .bulletpoint__header {
     text-transform: uppercase;
     letter-spacing: .38em;
     margin-bottom: 0;
-    font-weight: 300;
-    font-size: inherit;
+    font-size: .9rem;
+    font-weight: 400;
 }
-
 .bulletpoint__body {
-    line-height: 1.57em;
+    line-height: 1.41rem;
     max-width: 23em;
     margin-top: 0.18rem;
+    font-size: .75rem;
 }
-
 .articles {
     padding-top: 6rem;
     padding-bottom: 5rem;
 }
-
 .article {
+    text-align: center;
     background-color: $background-light;
     padding: 2.5em;
     position: relative;
+    margin: 0 0 2rem 0;
+    &:last-of-type {
+        margin-bottom: 0;
+    }
 }
-
 .article__header {
     font-size: 1.125rem;
     margin-bottom: 2em;
 }
-
-.article__body {
-    font-weight: 300;
-}
-
 .article__link {
     color: $article-link;
-    font-weight: 300;
     margin-top: 0.5rem;
     position: absolute;
     bottom: 2.15rem;
     left: 50%;
     transform: translateX(-50%);
 }
-
 .address {
     background-color: $background-dark;
     padding-top: 1rem;
     padding-bottom: 1rem;
 }
-
 .address, .address__email {
     color: $text-light;
     text-decoration: none;
 }
-
 .address__text {
     font-style: normal;
-    font-weight: 300;
     max-width: 39rem;
     line-height: 148%;
 }
-
 .address__header {
     font-size: inherit;
 }
-
 .address__map {
     width: 100%;
     height: 25rem;
 }
-
 .footer {
     padding-top: 1.4rem;
     color: $footer;
@@ -359,7 +292,6 @@ a:focus {
     padding-left: 0;
     font-size: 1.5rem;
 }
-
 .footer__item {
     padding-right: 0.5rem;
     &:last-of-type {
@@ -367,13 +299,9 @@ a:focus {
         padding-right: 0;
     }
 }
-
 .copyright {
-    font-weight: 300;
     font-size: 1.25rem;
 }
-
-
 @media (min-width: $medium-width) {
     .navbar {
         height: $nav-height-full;
@@ -408,7 +336,6 @@ a:focus {
         justify-content: center;
         width: 100%;
     }
-
     .showcase__tile {
         flex: 0 1 559px;
         margin: 0;
@@ -425,14 +352,12 @@ a:focus {
     .big_text {
         margin: 13.3rem auto 13rem;
     }
-
     .example {
         display: flex;
         flex-flow: row nowrap;
         align-items: center;
         justify-content: space-around;
     }
-    
     .example__bulletpoints {
         flex-shrink: 0;
         display: flex;
@@ -460,22 +385,19 @@ a:focus {
     .article {
         flex: 1;
         padding: 1.5rem 2.5rem 5rem;
-        margin-right: 2rem;
-        
+        margin: 0 2rem 0 0;
         &:last-of-type {
             margin-right: 0;
         }
     }
-    .address > div {
+    .address__flexbox {
         display: flex;
         flex-flow: row nowrap;
         align-items: center;
     }
-    
     .address__text {
         padding-right: 10rem;
     }
-    
     .footer__item {
         padding-right: 1.75rem;
     }
