--- a/css/style.scss
+++ b/css/style.scss
@@ -94,6 +94,17 @@ a:focus {
     font-size: 1.5rem;
     letter-spacing: 0.415em;
 }
+@-webkit-keyframes hide_navbar {
+    from {
+        left: 0;
+    }
+    75% {
+        left: -99%;
+    }
+    to {
+        left: -90%;
+    }
+}
 @keyframes hide_navbar {
     from {
         left: 0;
@@ -103,6 +114,14 @@ a:focus {
     }
     to {
         left: -90%;
+    }
+}
+@-webkit-keyframes show_navbar {
+    from {
+        left: -90%;
+    }
+    to {
+        left: 0;
     }
 }
 @keyframes show_navbar {
@@ -115,10 +134,12 @@ a:focus {
 }
 .nav_collapsed {
     left: -90%;
+    -webkit-animation: hide_navbar cubic-bezier(.73,.01,.04,1) 0.35s ;
     animation: hide_navbar cubic-bezier(.73,.01,.04,1) 0.35s ;
 }
 .nav_expanded {
     left: 0;
+    -webkit-animation: show_navbar cubic-bezier(.73,.01,.04,1) 0.25s;
     animation: show_navbar cubic-bezier(.73,.01,.04,1) 0.25s;
 }
 .nav_collapsed #widget_show {
@@ -128,10 +149,17 @@ a:focus {
     display: none;
 }
 .navbar__links {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     list-style: none;
     padding: 0;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: column nowrap;
     flex-flow: column nowrap;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;    
 }
 .nav__widget {
@@ -157,8 +185,13 @@ a:focus {
     max-width: 24em;
 }
 .showcase {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     margin: 0 auto;
 }
@@ -170,6 +203,7 @@ a:focus {
     position: absolute;
     top: 50%;
     left: 50%;
+    -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
 .showcase__tile {
@@ -185,11 +219,13 @@ a:focus {
         padding: 0;
         min-width: 100%;
         height: 100%;
+        -webkit-transition: all 0.2s linear;
         transition: all 0.2s linear;
     }
     &:hover {
         img {
             opacity: 0.4;
+            -webkit-transition: all 0.4s ease-out;
             transition: all 0.4s ease-out;
         }
         .showcase__details {
@@ -255,6 +291,7 @@ a:focus {
     position: absolute;
     bottom: 2.15rem;
     left: 50%;
+    -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
 }
 .address {
@@ -284,10 +321,19 @@ a:focus {
     a {
         color: inherit;
     }
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: row nowrap;
     flex-flow: row nowrap;
     list-style-type: none;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
     justify-content: flex-start;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     padding-left: 0;
     font-size: 1.5rem;
@@ -307,8 +353,15 @@ a:focus {
         height: $nav-height-full;
     }
     .navbar__links {
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-flow: row nowrap;
         flex-flow: row nowrap;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
         align-items: center;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
         justify-content: space-between;
         height: 2rem;
         margin-top: 4.2rem;
@@ -331,12 +384,20 @@ a:focus {
         margin-bottom: 12rem;
     }
     .showcase {
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
         flex-flow: row wrap;
+        -ms-flex-line-pack: stretch;
         align-content: stretch;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
         justify-content: center;
         width: 100%;
     }
     .showcase__tile {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 1 559px;
         flex: 0 1 559px;
         margin: 0;
         padding: 0;
@@ -353,23 +414,45 @@ a:focus {
         margin: 13.3rem auto 13rem;
     }
     .example {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-flow: row nowrap;
         flex-flow: row nowrap;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
         align-items: center;
+        -ms-flex-pack: distribute;
         justify-content: space-around;
     }
     .example__bulletpoints {
+        -ms-flex-negative: 0;
         flex-shrink: 0;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-flow: column;
         flex-flow: column;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
         justify-content: center;
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 30rem;
         flex: 0 0 30rem;
         margin-left: 8rem;
     }
     .example__picture {
+        -webkit-box-flex: 1;
+        -ms-flex: 1 0 480px;
         flex: 1 0 480px;
         max-height: 720px;
         max-width: 840px;
+        -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
         align-self: center;
         img {
             width: 145%;
@@ -378,11 +461,20 @@ a:focus {
         }
     }
     .articles {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
         flex-flow: row wrap;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
         justify-content: space-between;
     }
     .article {
+        -webkit-box-flex: 1;
+        -ms-flex: 1;
         flex: 1;
         padding: 1.5rem 2.5rem 5rem;
         margin: 0 2rem 0 0;
@@ -391,8 +483,15 @@ a:focus {
         }
     }
     .address__flexbox {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-flow: row nowrap;
         flex-flow: row nowrap;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
         align-items: center;
     }
     .address__text {
